force-app/main/default/objects/Booking_Customer__c/Booking_Customer__c.object-meta.xml
<CustomObject>
    <label>Booking Customer</label>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Booking Customer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>