force-app/main/default/objects/Booking_Customer__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Booking Customer Entries</relationshipLabel>
    <relationshipName>Booking_Customer_Entries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>