force-app/main/default/objects/Booking_Customer__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Buyer</label>
    <type>Checkbox</type>
</CustomField>