force-app/main/default/objects/Booking_Customer__c/fields/PAN_Verified__c.field-meta.xml
<CustomField>
    <fullName>PAN_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAN Verified</label>
    <type>Checkbox</type>
</CustomField>