force-app/main/default/objects/Booking_Customer__c/fields/Payment_Share_Pct__c.field-meta.xml
<CustomField>
    <fullName>Payment_Share_Pct__c</fullName>
    <label>Payment Share Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>