force-app/main/default/objects/Booking_Customer__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship to Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Self</fullName><default>true</default><label>Self</label></value>
            <value><fullName>Spouse</fullName><default>false</default><label>Spouse</label></value>
            <value><fullName>Parent</fullName><default>false</default><label>Parent</label></value>
            <value><fullName>Child</fullName><default>false</default><label>Child</label></value>
            <value><fullName>Sibling</fullName><default>false</default><label>Sibling</label></value>
            <value><fullName>Co-Investor</fullName><default>false</default><label>Co-Investor</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>